# analytics_tasks_lite

./: 1_vl.html  2_ao.html  3_fs.html  404.html  4_slidejs.html  LICENSE  MANIFEST.in  README.md  bugfix.html  index.html  main.py  mkdocs.yml  publish.yml  pyproject.toml  pyproject_sync.py  setup.py
.github/workflows/: publish.yml
docs/: 1_vl.md  2_ao.md  3_fs.md  4_slidejs.md  bugfix.md  index.md
docs/assets/tmp/: combine_charts ex.py  combine_charts.py  div_writeup.htmltable
docs/examples/: .md to .html.py  combine.py  convert_markdown_to_html.py  de.py  fail_safe.py  formatting.py  run_all.py  search.html  secure.py  visual_library_demo_v11.py  visual_library_demo_v12.py
docs/examples/circle_packing_d3/: circle_packing_d3.py  circle_packing_d3_template.html  patient_universe_demo.html
examples/: fs_build.py  fs_query.py  slidejs.html
search/: search_index.js
site/: 1_vl.html  2_ao.html  3_fs.html  404.html  4_slidejs.html  bugfix.html  index.html
site/assets/stylesheets/: extra.css
site/search/: search_index.js  search_index.json
src/analytics_tasks_lite/: __init__.py
src/analytics_tasks_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/analytics_tasks_lite/automate_office/: build_batch.py  build_explore.py
src/analytics_tasks_lite/automate_office/input/: ____control.xlsm  ____control_20250825.xlsm
src/analytics_tasks_lite/file_search/: __init__.py  build.py  functions.py  load_search_polars.py
src/analytics_tasks_lite/slidesjs/: __init__.py  excel_table_to_html.py  kpi_card.py  slidejs.py  slidejs_chart_template.html  slidejs_excel_runner.py  slidejs_template.html
src/analytics_tasks_lite/slidesjs/dev/: notes.md  prompt.py  usage.md
src/analytics_tasks_lite/slidesjs/slidesjs_helper/: __init__.py  apply_theme_to_colors.py  generate_slide_index_text.py  parse_ui_colors_to_theme_df.py  transform_to_agenda_items.py
src/analytics_tasks_lite/slidesjs/tests/: check_chart.py  check_project.py
src/analytics_tasks_lite/utils/: combine_charts.py
src/analytics_tasks_lite/utils/controlling/: __init__.py  log.py  run_py_file.py  timer.py
src/analytics_tasks_lite/utils/creating/: __init__.py  mkdocs_build.py  mkdocs_build_dirty.py
src/analytics_tasks_lite/visual_library_ao/: build.py  visual_library_demo.py  visual_library_demo_old.py
(+125 files in other folders)
